Functions: - read_count : import by sample instead of RNA - generate_metadata_df : generate a metadata data frame

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(compute.cscore.zscore)
 export(compute.window.median.mad)
 export(export.results.XLS)
 export(general.infos.for.excel.output)
+export(generate_metadata_df)
 export(get.file.prefix)
 export(get.known.sites.info)
 export(get.sample.names.from.annot)
@@ -22,5 +23,6 @@ export(plot.volcano.of.scores)
 export(prepare.output.data.Scores)
 export(produce.summary.output.table)
 export(read.and.annotate.data)
+export(read_counts)
 export(select.methylated.positions)
 export(select.new.candidates)
