Deletion of legacy + updating documentation and namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,11 @@
 
 export(calculate_score)
 export(calculate_score_by_RNA)
-export(compute.cscore.zscore)
-export(compute.window.median.mad)
+export(calculate_score_by_sample)
 export(export.results.XLS)
 export(general.infos.for.excel.output)
 export(generate_metadata_df)
-export(get.file.prefix)
 export(get.known.sites.info)
-export(get.sample.names.from.annot)
 export(get.suspected.sites.info)
 export(load.gc.content.for.human.ribosome)
 export(load.gc.content.for.mouse.ribosome)
@@ -24,7 +21,6 @@ export(plot.quality.control.coverage)
 export(plot.volcano.of.scores)
 export(prepare.output.data.Scores)
 export(produce.summary.output.table)
-export(read.and.annotate.data)
 export(read_counts)
 export(select.methylated.positions)
 export(select.new.candidates)
