--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,16 @@ Title: Computation of scores to validate known or suspected and to
 Version: 0.3
 Date: 2019-01-31
 Author: Janice Kielbassa
-Maintainer: Janice Kielbassa <janice.kielbassa@lyon.unicancer.fr>
+Maintainer: Theo COMBE <theo.combe@lyon.unicancer.fr>
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Depends: R (>= 3.0.0), corrplot, lattice, stringi, plyr, WriteXLS,
-        ggplot2, ggrepel, ggpubr, scales, dplyr, tidyr, factoextra, pheatmap
+        ggplot2, ggrepel, ggpubr, scales, dplyr, tidyr, factoextra, pheatmap, sva
 LazyData: TRUE
 RoxygenNote: 7.1.1
 NeedsCompilation: no
 Packaged: 2019-02-04 13:27:40 UTC; janice
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
