Implementation of kruskal-Wallis test on C-score and most significant sites selection + plot.
These functions are useful for finding the most interesting sites

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,11 +45,16 @@ export(plot_fca)
 export(plot_heatmap)
 export(plot_heatmap_corr)
 export(plot_lineplot)
+export(plot_most_significant_sites)
+export(plot_test_wrapper)
 export(prepare.output.data.Scores)
 export(prettyNum)
 export(produce.summary.output.table)
 export(read_counts)
 export(ribo_combatseq)
+export(ribo_remove_rna)
+export(select_most_significant_sites)
 export(subset_ribo)
 export(update_ribo_count_with_matrix)
 export(update_riboclass_rna_names)
+export(wrapper.kruskal.test)
