add new file with IQR code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,10 +46,10 @@ export(plot_heatmap)
 export(plot_heatmap_corr)
 export(plot_lineplot)
 export(prepare.output.data.Scores)
-export(prettyNum)
 export(produce.summary.output.table)
 export(read_counts)
 export(ribo_combatseq)
+export(show_RNA_names)
 export(subset_ribo)
 export(update_ribo_count_with_matrix)
 export(update_riboclass_rna_names)
