New NAMESPACE after adding IQR functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(generate_riboclass_named_position)
 export(generate_rna_names_table)
 export(get.known.sites.info)
 export(get.suspected.sites.info)
+export(get_IQR)
 export(load.gc.content.for.human.ribosome)
 export(load.gc.content.for.mouse.ribosome)
 export(mann.whitney.test)
@@ -45,6 +46,7 @@ export(plot_fca)
 export(plot_heatmap)
 export(plot_heatmap_corr)
 export(plot_lineplot)
+export(plot_sites_by_IQR)
 export(prepare.output.data.Scores)
 export(produce.summary.output.table)
 export(read_counts)
