--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,8 @@ export(load_ribodata)
 export(mean_samples_by_conditon)
 export(plot_PCA)
 export(remove_ribo_samples)
+export(remove_rna)
 export(rename_rna)
-export(ribo_remove_rna)
 export(show_RNA_names)
 export(subset_ribo)
 importFrom(dplyr,"%>%")
