--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 S3method(print,RiboClass)
 export(adjust_bias)
 export(annotate_site)
-export(batch_report)
 export(compute_cscore)
 export(create_riboclass)
 export(extract_data)
@@ -15,6 +14,7 @@ export(plot_PCA)
 export(remove_ribo_samples)
 export(remove_rna)
 export(rename_rna)
+export(report_qc)
 export(show_RNA_names)
 export(subset_ribo)
 importFrom(dplyr,"%>%")
