doc improvements + name fix
- removed some unused comments
- show_RNA_names is now show_rna_names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(remove_ribo_samples)
 export(remove_rna)
 export(rename_rna)
 export(report_qc)
-export(show_RNA_names)
+export(show_rna_names)
 export(subset_ribo)
 importFrom(dplyr,"%>%")
 importFrom(rlang,sym)
