--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(keep_ribo_samples)
 export(load_ribodata)
 export(mean_samples_by_conditon)
 export(plot_PCA)
+export(plot_coa)
 export(remove_ribo_samples)
 export(remove_rna)
 export(rename_rna)
