--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,9 @@ export(format_to_plot)
 export(keep_ribo_samples)
 export(load_ribodata)
 export(mean_samples_by_conditon)
-export(plot_PCA)
 export(plot_coa)
 export(plot_heatmap)
+export(plot_pca)
 export(plot_rle)
 export(remove_ribo_samples)
 export(remove_rna)
