Plot correlation distance heatmap

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(load_ribodata)
 export(mean_samples_by_conditon)
 export(plot_coa)
 export(plot_heatmap)
+export(plot_heatmap_corr)
 export(plot_pca)
 export(plot_rle)
 export(remove_ribo_samples)
