--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,RiboClass)
 export(adjust_bias)
 export(annotate_site)
 export(boxplot_count)
+export(boxplot_cscores)
 export(compute_cscore)
 export(extract_data)
 export(format_to_plot)
@@ -11,6 +12,8 @@ export(keep_ribo_samples)
 export(load_ribodata)
 export(mean_samples_by_conditon)
 export(plot_coa)
+export(plot_counts_fraction)
+export(plot_diff_sites)
 export(plot_heatmap)
 export(plot_heatmap_corr)
 export(plot_pca)
@@ -18,8 +21,10 @@ export(plot_rle)
 export(remove_ribo_samples)
 export(remove_rna)
 export(rename_rna)
+export(report_diff_sites)
 export(report_qc)
 export(show_rna_names)
 export(subset_ribo)
+import(ggplot2)
 importFrom(dplyr,"%>%")
 importFrom(rlang,sym)
