New plot : plot_counts_env

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(keep_ribo_samples)
 export(load_ribodata)
 export(mean_samples_by_conditon)
 export(plot_coa)
+export(plot_counts_env)
 export(plot_counts_fraction)
 export(plot_diff_sites)
 export(plot_heatmap)
