--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,10 @@ export(boxplot_cscores)
 export(compute_cscore)
 export(extract_data)
 export(format_to_plot)
+export(get_IQR)
+export(get_variant_sites)
 export(keep_ribo_samples)
+export(keep_selected_annotation)
 export(load_ribodata)
 export(mean_samples_by_conditon)
 export(plot_coa)
@@ -19,10 +22,10 @@ export(plot_heatmap)
 export(plot_heatmap_corr)
 export(plot_pca)
 export(plot_rle)
+export(remove_annotation)
 export(remove_ribo_samples)
 export(remove_rna)
 export(rename_rna)
-#export(report_diff_sites)
 export(report_qc)
 export(show_rna_names)
 import(ggplot2)
