--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,26 @@
 Package: rRMSAnalyzer
 Type: Package
-Title: rRMSAnalyzer: package to analyze RiboMethSeq data
-Version: 1.0.0
-Author: Janice Kielbassa, Theo Combe, Hermes Paraqindes
-Maintainer: Theo COMBE <epirnatools@lyon.unicancer.fr>
-Description: A package dedicated to ribomethseq analysis. It contains a set of easy-to-use functions.
+Title: Package to Analyze RiboMethSeq Data
+Version: 2.0.0
+Authors@R: c(
+    person("Théo","Combe", email="epirnatools@lyon.unicancer.fr", role=c("aut","cre")),
+    person("Hermes","Paraqindes", role="aut"),
+    person("Janice","Kielbassa", role="aut"),
+    person("Virginie","Marcel", role="aut"),
+    person("Émilie","Thomas", role="aut"),
+    person("Anthony","Ferrari", role="aut"),
+    person("Fondation Synergie Lyon Cancer", role="fnd"),
+    person("INCA", role="fnd"),
+    person("SIRIC program", role="fnd"),
+    person("LabEX program", role="fnd"),
+    person("Ligue Nationale Contre le Cancer", role="fnd"),
+    person("Centre de Recherche en Cancérologie de Lyon", role="cph"))
+Description: A set of easy-to-use functions to analyze end read count data of RiboMethSeq (RNA 2'Ome).
 License: GPL (>= 3)
-biocViews: sva, ComplexHeatmap
+URL: https://github.com/RibosomeCRCL/rRMSAnalyzer
+BugReports: https://github.com/RibosomeCRCL/rRMSAnalyzer/issues
 Depends: R (>= 3.5.0)
-Imports: dplyr, stringr, tidyr, rlang, sva, factoextra, ade4, ggplot2, ComplexHeatmap, colorRamp2
+Imports: dplyr, tidyr, rlang, cli, sva, factoextra, ade4, ggplot2, ComplexHeatmap, colorRamp2, reshape2, scales
 LazyData: FALSE
 RoxygenNote: 7.2.3
 NeedsCompilation: no
