--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Authors@R: c(
     person("Centre de Recherche en Cancérologie de Lyon", role="cph"))
 Description: A set of easy-to-use functions to analyze end read count data of RiboMethSeq (RNA 2'Ome).
 License: GPL (>= 3)
-URL: https://github.com/RibosomeCRCL/rRMSAnalyzer
+URL: https://github.com/RibosomeCRCL/rRMSAnalyzer,
+    https://ribosomecrcl.github.io/rRMSAnalyzer/
 BugReports: https://github.com/RibosomeCRCL/rRMSAnalyzer/issues
 Depends: R (>= 3.5.0)
 Imports: dplyr, tidyr, rlang, cli, sva, factoextra, ade4, ggplot2, ComplexHeatmap, colorRamp2, reshape2, scales
