Added back biocViews in description
install_github will find bioconductor packages (sva & ComplexHeatmap) using this trick

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ BugReports: https://github.com/RibosomeCRCL/rRMSAnalyzer/issues
 Depends: R (>= 3.5.0)
 Imports: dplyr, tidyr, rlang, cli, sva, factoextra, ade4, ggplot2, ComplexHeatmap, colorRamp2, reshape2, scales
 LazyData: FALSE
+biocViews:
 RoxygenNote: 7.2.3
 NeedsCompilation: no
 Encoding: UTF-8
