Update example for get_annotation and pkgdown

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(compute_cscore)
 export(extract_data)
 export(format_to_plot)
 export(get_IQR)
+export(get_annotation)
 export(get_variant_sites)
 export(keep_ribo_samples)
 export(keep_selected_annotation)
