--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ metadata.csv
 quality_control.html
 
 quality_control.html
+Counts/
+diff_sites_files/
+inst/rmd/quality_control.csv
+tests/testthat/Rplots.pdf
+2ome_analysis.html
