export plot_sites_by_iqr fonction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(plot_heatmap)
 export(plot_heatmap_corr)
 export(plot_pca)
 export(plot_rle)
+export(plot_sites_by_IQR)
 export(remove_annotation)
 export(remove_ribo_samples)
 export(remove_rna)
