--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Package to Analyze RiboMethSeq Data
 Version: 2.0.1
 Authors@R: c(
     person("Théo","Combe", email="epirnatools@lyon.unicancer.fr", role=c("aut","cre")),
-        person("Allyson","Moureaux", role=c("aut","cre")),
+        person("Allyson","Moureaux", role="aut"),
     person("Hermes","Paraqindes", role="aut"),
     person("Janice","Kielbassa", role="aut"),
     person("Fleur","Bourdelais", role="aut"),
