--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,9 +16,11 @@ export(keep_selected_annotation)
 export(load_ribodata)
 export(mean_samples_by_conditon)
 export(plot_coa)
+export(plot_comparison_medianes)
 export(plot_counts_env)
 export(plot_counts_fraction)
 export(plot_diff_sites)
+export(plot_global_profile)
 export(plot_heatmap)
 export(plot_heatmap_corr)
 export(plot_pca)
