Add function for stat in diff_sites

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(format_to_plot)
 export(get_IQR)
 export(get_annotation)
 export(get_variant_sites)
+export(heatmap_annotated)
 export(keep_ribo_samples)
 export(keep_selected_annotation)
 export(load_ribodata)
@@ -26,11 +27,13 @@ export(plot_heatmap_corr)
 export(plot_pca)
 export(plot_rle)
 export(plot_sites_by_IQR)
+export(plot_stat)
 export(remove_annotation)
 export(remove_ribo_samples)
 export(remove_rna)
 export(rename_rna)
 export(report_qc)
+export(res_pv)
 export(show_rna_names)
 import(ggplot2)
 importFrom(dplyr,"%>%")
