--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Package to Analyze RiboMethSeq Data
 Version: 2.0.1
 Authors@R: c(
-    person("Théo","Combe", email="epirnatools@lyon.unicancer.fr", role=c("aut","cre")),
+    person("Théo","Combe", email="ribosome.crcl@lyon.unicancer.fr", role=c("aut","cre")),
         person("Allyson","Moureaux", role="aut"),
     person("Hermes","Paraqindes", role="aut"),
     person("Janice","Kielbassa", role="aut"),
@@ -24,7 +24,7 @@ URL: https://github.com/RibosomeCRCL/rRMSAnalyzer,
     https://ribosomecrcl.github.io/rRMSAnalyzer/
 BugReports: https://github.com/RibosomeCRCL/rRMSAnalyzer/issues
 Depends: R (>= 3.5.0)
-Imports: dplyr, tidyr, rlang, cli, sva, factoextra, ade4, ggplot2, ComplexHeatmap, colorRamp2, reshape2, scales, cowplot
+Imports: dplyr, tidyr, rlang, cli, sva, factoextra, ade4, ggplot2, ComplexHeatmap, colorRamp2, reshape2, scales, cowplot, grid
 LazyData: FALSE
 biocViews:
 RoxygenNote: 7.3.2
