--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -30,16 +30,17 @@ jobs:
         with:
           use-public-rspm: true
             
-      - name: Install Bioconductor base
+      - name: Install BiocParallel manually
         run: |
           install.packages("BiocManager")
-          BiocManager::install(c("BiocParallel"), ask = FALSE)
+          BiocManager::install("BiocParallel", ask = FALSE, update = FALSE)
         shell: Rscript {0}
-
+        
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::pkgdown, local::.
           needs: website
+          lockfile: false
 
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
