--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -40,7 +40,7 @@ jobs:
         with:
           extra-packages: any::pkgdown, local::.
           needs: website
-          dependencies: true
+          dependencies: "true"
 
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
