--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -42,7 +42,7 @@ jobs:
             any::pkgdown
             local::.
           needs: website
-          dependencies: true
+          dependencies: "hard"
 
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
