--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -23,7 +23,9 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v3
-      
+      - uses: r-lib/actions/setup-r@v2   #  Installer R en premier
+        with:
+          use-public-rspm: true
       - name: Install Bioconductor base
         run: |
           install.packages("BiocManager")
