Change name of function for english one

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,7 @@ export(keep_selected_annotation)
 export(load_ribodata)
 export(mean_samples_by_conditon)
 export(plot_coa)
-export(plot_comparison_medianes)
+export(plot_comparison_median)
 export(plot_counts_env)
 export(plot_counts_fraction)
 export(plot_diff_sites)
