--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,6 @@ export(format_to_plot)
 export(get_IQR)
 export(get_annotation)
 export(get_variant_sites)
-export(heatmap_annotated)
 export(keep_ribo_samples)
 export(keep_selected_annotation)
 export(load_ribodata)
@@ -23,6 +22,7 @@ export(plot_counts_fraction)
 export(plot_diff_sites)
 export(plot_global_profile)
 export(plot_heatmap)
+export(plot_heatmap_annotated)
 export(plot_heatmap_corr)
 export(plot_pca)
 export(plot_rle)
@@ -38,3 +38,15 @@ export(show_rna_names)
 import(ggplot2)
 importFrom(dplyr,"%>%")
 importFrom(rlang,sym)
+importFrom(stats,anova)
+importFrom(stats,cor)
+importFrom(stats,kruskal.test)
+importFrom(stats,lm)
+importFrom(stats,mad)
+importFrom(stats,median)
+importFrom(stats,p.adjust)
+importFrom(stats,sd)
+importFrom(stats,setNames)
+importFrom(stats,t.test)
+importFrom(stats,wilcox.test)
+importFrom(utils,head)
