Change email adresse from ribosome.crcl@lyon.unicancer.fr to RibosOmics@lyon.unicancer.fr cause we created an alias in 2025

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Package to Analyze RiboMethSeq Data
 Version: 2.0.1
 Authors@R: c(
-    person("Théo","Combe", email="ribosome.crcl@lyon.unicancer.fr", role=c("aut","cre")),
+    person("Théo","Combe", email="RibosOmics@lyon.unicancer.fr", role=c("aut","cre")),
     person("Allyson","Moureaux", role="aut"),
     person("Hermes","Paraqindes", role="aut"),
     person("Janice","Kielbassa", role="aut"),
@@ -23,10 +23,10 @@ License: GPL (>= 3)
 URL: https://github.com/RibosomeCRCL/rRMSAnalyzer,
     https://ribosomecrcl.github.io/rRMSAnalyzer/
 BugReports: https://github.com/RibosomeCRCL/rRMSAnalyzer/issues
-Depends: R (>= 4.1.0)
+Depends: R (>= 4.5.0)
 Imports: RColorBrewer, dplyr, tibble, tidyr, rlang, cli, sva, factoextra, ade4, ggplot2, ComplexHeatmap, colorRamp2, reshape2, scales, cowplot, grid, patchwork
 LazyData: FALSE
-biocViews:
+biocViews: Software, BiologicalQuestion, RiboSeq, BatchEffect, DifferentialMethylation
 RoxygenNote: 7.3.2
 NeedsCompilation: no
 Encoding: UTF-8
