Create a function to get outlier data frame summary for QC report

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -44,6 +44,7 @@ reference:
   - get_IQR
   - get_variant_sites
   - res_pv
+  - get_outliers
 - title: Plots
   desc: Different plots to show either samples and sites.
 - contents:
