--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(extract_data)
 export(format_to_plot)
 export(get_IQR)
 export(get_annotation)
+export(get_outliers)
 export(get_variant_sites)
 export(keep_ribo_samples)
 export(keep_selected_annotation)
