--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(boxplot_cscores)
 export(compute_cscore)
 export(extract_data)
 export(format_to_plot)
+export(get_2ome_summary)
 export(get_IQR)
 export(get_annotation)
 export(get_outliers)
