--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ URL: https://github.com/RibosomeCRCL/rRMSAnalyzer,
     https://ribosomecrcl.github.io/rRMSAnalyzer/
 BugReports: https://github.com/RibosomeCRCL/rRMSAnalyzer/issues
 Depends: R (>= 4.5.0)
-Imports: RColorBrewer, dplyr, tibble, tidyr, rlang, cli, sva, factoextra, ade4, ggplot2, ComplexHeatmap, colorRamp2, reshape2, scales, cowplot, grid, patchwork
+Imports: RColorBrewer, dplyr, tibble, tidyr, rlang, cli, sva, factoextra, ade4, ggplot2, ComplexHeatmap, colorRamp2, reshape2, scales, cowplot, grid, patchwork, DT, htmltools, glue
 LazyData: FALSE
 biocViews: Software, BiologicalQuestion, RiboSeq, BatchEffect, DifferentialMethylation
 RoxygenNote: 7.3.2
@@ -34,7 +34,6 @@ Suggests:
     knitr,
     kableExtra,
     rmarkdown,
-    testthat (>= 3.0.0), 
-    DT
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
