3 new function for diff_site

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(format_to_plot)
 export(get_2ome_summary)
 export(get_IQR)
 export(get_annotation)
+export(get_diff_sites_summary)
 export(get_outliers)
 export(get_variant_sites)
 export(keep_ribo_samples)
@@ -34,6 +35,8 @@ export(remove_annotation)
 export(remove_ribo_samples)
 export(remove_rna)
 export(rename_rna)
+export(render_html_welch)
+export(render_html_wilcoxon)
 export(report_qc)
 export(res_pv)
 export(show_rna_names)
