change name of plot_rle for plot_rlc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,7 @@ export(plot_heatmap)
 export(plot_heatmap_annotated)
 export(plot_heatmap_corr)
 export(plot_pca)
-export(plot_rle)
+export(plot_rlc)
 export(plot_sites_by_IQR)
 export(plot_stat)
 export(remove_annotation)
