--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,12 +8,12 @@ Authors@R: c(
     person("Hermes","Paraqindes", role="aut"),
     person("Janice","Kielbassa", role="aut"),
     person("Fleur","Bourdelais", role="aut"),
-    person("Sebastien","Durand", role="aut"),
+    person("Sébastien","Durand", role="aut"),
     person("Virginie","Marcel", role="aut"),
     person("Émilie","Thomas", role="aut"),
     person("Anthony","Ferrari", role="aut"),
     person("Fondation Synergie Lyon Cancer", role="fnd"),
-    person("INCA", role="fnd"),
+    person("INCa", role="fnd"),
     person("SIRIC program", role="fnd"),
     person("LabEX program", role="fnd"),
     person("Ligue Nationale Contre le Cancer", role="fnd"),
