add magrittr for report_diff_site

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,10 +38,13 @@ export(remove_rna)
 export(rename_rna)
 export(render_html_welch)
 export(render_html_wilcoxon)
+export(report_2ome_sites)
+export(report_diff_sites)
 export(report_qc)
 export(show_rna_names)
 import(ggplot2)
 importFrom(dplyr,"%>%")
+importFrom(magrittr,"%>%")
 importFrom(rlang,sym)
 importFrom(stats,anova)
 importFrom(stats,cor)
