--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ URL: https://github.com/RibosomeCRCL/rRMSAnalyzer,
     https://ribosomecrcl.github.io/rRMSAnalyzer/
 BugReports: https://github.com/RibosomeCRCL/rRMSAnalyzer/issues
 Depends: R (>= 4.5.0)
-Imports: RColorBrewer, dplyr, tibble, tidyr, rlang, cli, sva, factoextra, ade4, ggplot2, ComplexHeatmap, colorRamp2, reshape2, scales, cowplot, grid, patchwork, DT, htmltools, glue, knitr, kableExtra
+Imports: RColorBrewer, dplyr, tibble, tidyr, rlang, cli, sva, factoextra, ade4, ggplot2, ComplexHeatmap, colorRamp2, reshape2, scales, cowplot, grid, patchwork, DT, htmltools, glue, knitr, kableExtra, magrittr
 LazyData: FALSE
 biocViews: Software, BiologicalQuestion, RiboSeq, BatchEffect, DifferentialMethylation
 RoxygenNote: 7.3.2
